# sea_language

./: .gitignore  Cargo.toml  build.rs  grammar.js  package-lock.json  package.json  tree-sitter.json
bindings/node/: index.d.ts  index.js
bindings/rust/: build.rs  lib.rs
docs/: animal.c  animal.h  animal.sea  basic  basic.c  basic.sea  examples.txt  main  main.c  test.sea
docs/Sea Language/: Sea-Language-Roadmap.md
docs/Sea Language/.obsidian/: workspace.json
src/: grammar.json  main.rs  node-types.json  parser.c  parser.rs  sea_toml_parser.rs  transcriber.rs
