[package]
name = "sea_language"
version = "0.1.0"
edition = "2024"

[dependencies]
tree-sitter = "0.26.9"
tree-sitter-c = "0.24.2"
tree-sitter-language = "0.1.7"
tree-sitter-sea = { path = "../tree-sitter-sea" }  # add this
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2+spec-1.1.0"

[build-dependencies]
cc = "1.0"
